aiostreams/middleware-chain-stream.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: chain-stream
  namespace: aiostreams
spec:
  chain:
    middlewares:
    # These are generic
    - name: headers-add-cors-for-stremio
      namespace: traefik
    - name: return-code-override-ratelimit
      namespace: traefik

    # These are specific to aiostreams
    - name: errors-rate-limit-exceeded   
    - name: rate-limit-stream
