aiostreams/middleware-rate-limit-stream.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rate-limit-stream
  namespace: aiostreams
spec:
  rateLimit:
    average: 12    # 6 requests per source IP every ..
    period: 1m     # This is a per-node limit, and we have 12 nodes (x), randomly load-balanced, so it's effectively 6/min, or 1/10s
    burst: 5       # Allow 10 requests in the period to start off with, before rate-limiting kicks in
    sourceCriterion:
      requestHeaderName: CF-Connecting-IP # Rate-limit by cloudflare connecting IP
